[Feature #159965437] Fix distorted article landing page

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -73,68 +73,34 @@
   padding: 0 10px;
 }
 
-.modal1 {
-  #modal2 {
-    text-align: center;
-    width: 70%;
-    background-color: #dbebeb;
-  }
+#modal2 {
+  text-align: center;
+  width: 60%;
+  background-color: #dbebeb;
+}
 
-  .modal-content p {
-    margin: 1% 25%;
-    text-align: center;
-    font: 18px "Robot";
-  }
+.modal-content p {
+  margin: 1% 25%;
+  text-align: center;
+  font: 18px "Robot";
+}
 
-  .mdl-footer {
-    text-align: center;
-    background-color: #dbebeb;
-  }
+.alert-error {
+  color: red;
+  font-style: oblique;
+  margin-top: 0.5em;
+  padding: 0.6em;
+}
 
-  .alert-error {
-    color: #c80a0a;
-    font-style: oblique;
-    padding: 0.6em;
-    margin-top: 0.5em;
-  }
+.reg-button {
+  margin: 0 auto;
+}
 
-  .reg-button {
-    margin: 0 auto;
-  }
+.row style {
+  margin-top: 2%;
+  width: 50%;
+}
 
-  .row style {
-    width: 50%;
-    margin-top: 2%;
-  }
-
-  #modal2 {
-    text-align: center;
-    width: 60%;
-    background-color: #dbebeb;
-  }
-
-  .modal-content p {
-    margin: 1% 25%;
-    text-align: center;
-    font: 18px "Robot";
-  }
-
-  .alert-error {
-    color: red;
-    font-style: oblique;
-    margin-top: 0.5em;
-    padding: 0.6em;
-  }
-
-  .reg-button {
-    margin: 0 auto;
-  }
-
-  .row style {
-    margin-top: 2%;
-    width: 50%;
-  }
-
-  .alert-reg-success {
-    color: green;
-  }
+.alert-reg-success {
+  color: green;
+}
